--- a/css/header.css
+++ b/css/header.css
@@ -2,47 +2,37 @@
 Header section CSS
  */
 
-#header {
+.header {
     padding-top: 10px;
     background-color: #60a6ff;
 }
 
-#header-wrapper {
-    margin: auto;
-    max-width: 1200px;
+.header-wrapper {
+    display: inline-block;
+    margin-left: 10%;
 }
 
-#header a {
+.header a {
     display:inline-block;
     padding:10px 30px;
     text-decoration: none;
+    color: white;
+    cursor: pointer;
 }
 
-#header a:hover {
-    background-color: #161cff;
+.header-wrapper a:hover {
+    background-color: #0a112b;
 }
 
-/*#headerList {*/
-    /*position: absolute;*/
-    /*bottom: 0;*/
-    /*padding-left: 10%;*/
-    /*margin: 0;*/
-    /*list-style-type: none;*/
-    /*display: inline-block;*/
-/*}*/
+.header-basket {
+    display: inline-block;
+    margin-left: 30%;
+}
 
-/*#headerList li {*/
-    /*display: inline-block;*/
-/*}*/
+.header-basket a {
+    color: white;
+    cursor: pointer;
+}
 
-/*#headerList li a {*/
-    /*display: block;*/
-    /*padding: 10px 40px;*/
-    /*color: white;*/
-    /*text-decoration: none;*/
-/*}*/
 
-/*#headerList li a:hover {*/
-    /*background-color: #161cff;*/
-/*}*/
 
