--- a/css/header.css
+++ b/css/header.css
@@ -7,7 +7,7 @@ Header section CSS
     background-color: #60a6ff;
 }
 
-.header-wrapper {
+.header__wrapper {
     display: inline-block;
     margin-left: 10%;
 }
@@ -20,16 +20,16 @@ Header section CSS
     cursor: pointer;
 }
 
-.header-wrapper a:hover {
+.header_wrapper a:hover {
     background-color: #0a112b;
 }
 
-.header-basket {
+.header__basket {
     display: inline-block;
     margin-left: 30%;
 }
 
-.header-basket a {
+.header_basket a {
     color: white;
     cursor: pointer;
 }
