--- a/css/camerastore.css
+++ b/css/camerastore.css
@@ -62,11 +62,11 @@ input[type=number]::-webkit-inner-spin-button {
 
 .content {
     display: flex;
-    max-width: 1500px;
+    max-width: 1400px;
     margin: 30px auto;
     flex-wrap: wrap;
-    border-color: #0a112b;
-    border-style: solid;
+    /*border-color: #0a112b;*/
+    /*border-style: solid;*/
 }
 
 .content__item {
@@ -74,32 +74,29 @@ input[type=number]::-webkit-inner-spin-button {
     flex-direction: column;
     flex-wrap: wrap;
     height: 500px;
-    max-width: 700px;
-    border-color: #0a112b;
-    border-style: solid;
+    /*border-color: #0a112b;*/
+    /*border-style: solid;*/
 }
 
 .content__img-wrapper {
-    min-height:250px;
-    max-width: 350px;
-    overflow: hidden;
-    border-color: #0a112b;
-    border-style: solid;
+    width: 350px;
+    
+    /*border-color: #0a112b;*/
+    /*border-style: solid;*/
 }
 
 .content__description-wrapper {
-    margin-top: 5px;
-    min-height: 150px;
-    max-width: 350px;
-    border-color: #0a112b;
-    border-style: solid;
+    width: 350px;
+    /*border-color: #0a112b;*/
+    /*border-style: solid;*/
 }
 
 .content__price-wrapper {
-    max-height: 90px;
-    min-width: 350px;
-    align-self: flex-end;
-    border-color: #0a112b;
-    border-style: solid;
+    width: 350px;
+    /*border-color: #0a112b;*/
+    /*border-style: solid;*/
 }
 
+.content__img {
+    max-width: 100%;
+}
