--- a/css/camerastore.css
+++ b/css/camerastore.css
@@ -12,16 +12,14 @@ body {
 /*Search area*/
 
 .search-box {
-    max-width: 75%;
+    max-width: 60%;
     margin: 30px auto;
-}
-
-.select-container {
-    display: inline-block;
+    display: flex;
+    justify-content: space-around;
 }
 
 .select-container__select {
-    width: 200px;
+    width: 160px;
     padding: 10px 10px;
     -webkit-appearance: none;
     background-image: url("../png/down-arrow.png");
@@ -30,17 +28,13 @@ body {
     outline: none;
 }
 
-.price-container {
-    display: inline-block;
-    margin-left: 5%;
-}
-
 .price-container__wrapper {
     display: inline-block;
     border: 1px solid rgb(169, 169, 169);
 }
 
 .price-container__input {
+    width: 120px;
     padding: 10px 10px;
     border-style: none;
     outline: none;
