--- a/css/camerastore.css
+++ b/css/camerastore.css
@@ -301,6 +301,10 @@ input[type=number]::-webkit-inner-spin-button {
       background-color: rgba(0, 0, 0, 0.3);
   }
 
+  .select-container {
+      margin: 0;
+  }
+
   .select-container__a {
       display: block;
       width: 90%;
@@ -334,7 +338,7 @@ input[type=number]::-webkit-inner-spin-button {
   }
 
   .price-container {
-      margin-bottom: 10px;
+      margin: 0 0 10px 0;
   }
 
   .price-container__label {
